# nodegui-plugin-qtmultimedia

./: .editorconfig  CMakeLists.txt  package-lock.json  package.json
config/: multimedia.cmake
scripts/: install.js
src/: demo.ts  index.ts
src/cpp/: main.cpp
src/cpp/QMediaContent/: nmediacontent.hpp  qmediacontent_wrap.cpp  qmediacontent_wrap.h
src/cpp/QMediaObject/: qmediaobject_macro.h
src/cpp/QMediaPlayer/: nmediaplayer.hpp  qmediaplayer_wrap.cpp  qmediaplayer_wrap.h
src/cpp/QStatusBar/: qstatusbar_wrap.h
src/cpp/Utils/: map_qstringlist.h
src/lib/: QMediaContent.ts  QMediaPlayer.ts
src/lib/utils/: addon.ts
